[gd_scene load_steps=11 format=3 uid="uid://fwwxmt2e06qi"]

[ext_resource type="Script" path="res://scenes/game_over.gd" id="1_fpcu1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_852nu"]
bg_color = Color(0, 0, 0, 0.827451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_khfcj"]
bg_color = Color(0.577008, 0.577008, 0.577008, 0.760784)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gldtx"]
bg_color = Color(0.244776, 0.244776, 0.244776, 0.760784)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vwf0o"]
bg_color = Color(1, 1, 1, 0.760784)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_83b7e"]
bg_color = Color(0, 0, 0, 0.635294)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a3eeb"]
bg_color = Color(0.251929, 0.508773, 0.568412, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 0.843137)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_01ynf"]
bg_color = Color(0.576471, 0.576471, 0.576471, 0.760784)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y1saq"]
bg_color = Color(0.243137, 0.243137, 0.243137, 0.760784)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eruu1"]
bg_color = Color(1, 1, 1, 0.760784)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 3

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fpcu1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_852nu")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.0
offset_top = -153.0
offset_right = 285.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "Game Over!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Restart" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -279.0
offset_top = -155.0
offset_right = -24.0
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/hover = SubResource("StyleBoxFlat_khfcj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gldtx")
theme_override_styles/normal = SubResource("StyleBoxFlat_vwf0o")
text = "Restart"

[node name="Quit" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 17.0
offset_top = -155.0
offset_right = 272.0
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/hover = SubResource("StyleBoxFlat_khfcj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gldtx")
theme_override_styles/normal = SubResource("StyleBoxFlat_vwf0o")
text = "Quit"

[node name="Quit_Confirm" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel2" type="Panel" parent="Quit_Confirm"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_83b7e")

[node name="Panel" type="Panel" parent="Quit_Confirm"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.5
offset_top = -83.0
offset_right = 159.5
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a3eeb")

[node name="Yes" type="Button" parent="Quit_Confirm"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = -2.0
offset_right = -38.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_01ynf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_y1saq")
theme_override_styles/normal = SubResource("StyleBoxFlat_eruu1")
text = "Yes"

[node name="No" type="Button" parent="Quit_Confirm"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 41.0
offset_top = -2.0
offset_right = 110.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_01ynf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_y1saq")
theme_override_styles/normal = SubResource("StyleBoxFlat_eruu1")
text = "No"

[node name="Label" type="Label" parent="Quit_Confirm"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -63.0
offset_right = 149.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Are you sure you'd like to quit?"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Panel/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Quit_Confirm/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="Quit_Confirm/No" to="." method="_on_no_pressed"]
